<resources>
    <string name="app_name">AndroidTest1</string>
    <string name="thailand">Thailand</string>
    <string name="singapore">Singapore</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="back">back</string>
    <string name="car_detail_title_tip">View all information about your subscription and get any help you require</string>
    <string name="driven_this_month">Driven this month</string>
    <string name="usage_due_this_month">Usage due this month</string>
    <string name="customize_your_insurance">Customize your insurance</string>
    <string name="manage_your_subscription">Manage your subscription</string>
    <string name="enhance_your_subscription">Enhance your subscription</string>
    <string name="enhance_desp">Take away the hassle of car ownershipand enjoy full comfort and conveniencewith our concierge service.</string>
    <string name="concierge_service">Concierge Service</string>
    <string name="request_error">Request error! \n  Please check your network and try again.</string>
</resources>