<?xml version="1.0" encoding="utf-8"?>
<layout>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.coorchice.library.SuperTextView
            android:id="@+id/stv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/choose_your_country"
            android:textColor="#222222"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.coorchice.library.SuperTextView
            android:id="@+id/stv_thailand"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/thailand"
            android:textColor="#ffffff"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/stv_singapore"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stv_title"
            app:layout_constraintWidth_percent="0.5"
            app:stv_corner="7dp"
            app:stv_pressBgColor="#55000000"
            app:stv_solid="#03A9F4" />

        <com.coorchice.library.SuperTextView
            android:id="@+id/stv_singapore"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/singapore"
            android:textColor="#ffffff"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stv_thailand"
            app:layout_constraintWidth_percent="0.5"
            app:stv_corner="7dp"
            app:stv_pressBgColor="#55000000"
            app:stv_solid="#FF9800" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>