<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="country"
            type="java.lang.String" />

        <variable
            name="carInfo"
            type="com.dullyoung.androidtest1.model.bean.CarInfo" />

        <variable
            name="detailVM"
            type="com.dullyoung.androidtest1.viewmodel.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="15dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_back">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/car_detail_title_tip"
                        android:textColor="#222222"
                        android:textSize="15sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_car_pic"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_airport_shuttle_00"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title" />

                    <TextView
                        android:id="@+id/tv_model"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@{detailVM.detailInfo.model}"
                        android:textColor="#222222"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_car_pic" />

                    <TextView
                        android:id="@+id/tv_cpn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{detailVM.detailInfo.carPlateNumber}"
                        android:textColor="#666666"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_model" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="#222222"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@id/pb_left"
                        app:layout_constraintEnd_toEndOf="@id/pb_left"
                        app:leftDate="@{detailVM.detailInfo}" />

                    <ProgressBar
                        android:id="@+id/pb_left"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_cpn"
                        app:mProgress="@{detailVM.detailInfo}" />


                    <LinearLayout
                        android:id="@+id/ll_driven_usage"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        app:layout_constraintTop_toBottomOf="@id/pb_left">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                drivenKM="@{detailVM.detailInfo}"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#ff9b27"
                                android:textSize="30sp"
                                app:layout_constraintBottom_toTopOf="@id/tv_driven_this_month"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_driven_this_month"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/driven_this_month"
                                android:textColor="#222222"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <View
                            android:id="@+id/view_line"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#eeeeee" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                usageFee="@{detailVM.detailInfo}"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#ff9b27"
                                android:textSize="30sp"
                                app:layout_constraintBottom_toTopOf="@id/tv_usage"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_usage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/usage_due_this_month"
                                android:textColor="#222222"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />


                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_last_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ll_driven_usage"
                        app:updateAt="@{detailVM.detailInfo}" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_fee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        app:bindAdapter="@{detailVM.detailInfo}"
                        app:layout_constraintTop_toBottomOf="@id/tv_last_update" />

                    <com.coorchice.library.SuperTextView
                        android:id="@+id/stv_custom"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/customize_your_insurance"
                        android:textColor="@color/white"
                        app:isGone="@{country}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rv_fee"
                        app:stv_corner="7dp"
                        app:stv_pressBgColor="#55000000"
                        app:stv_solid="#ff9b27" />

                    <TextView
                        android:id="@+id/tv_manage_sub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/manage_your_subscription"
                        android:textColor="#222222"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/stv_custom" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_sub"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        app:bindSubAdapter="@{country}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_manage_sub" />


                    <TextView
                        android:id="@+id/tv_enhance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/enhance_your_subscription"
                        android:textColor="#222222"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rv_sub" />

                    <ImageView
                        android:id="@+id/iv_enhance"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="50dp"
                        android:src="@mipmap/ic_launcher"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_enhance" />

                    <TextView
                        android:id="@+id/tv_enhance_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/concierge_service"
                        android:textColor="#222222"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/tv_enhance_desp"
                        app:layout_constraintStart_toEndOf="@id/iv_enhance"
                        app:layout_constraintTop_toTopOf="@id/iv_enhance" />

                    <TextView
                        android:id="@+id/tv_enhance_desp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:text="@string/enhance_desp"
                        android:textColor="#666666"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_enhance"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tv_enhance_title"
                        app:layout_constraintTop_toBottomOf="@id/tv_enhance_title" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_error"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/request_error"
                android:textColor="#666666"
                android:textSize="20sp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>